# CV-SUMMER-CAMP-2022

./: README.md
lectures/: 03_Krivonosov_Intro_to_python.ipynb
practice/1_OpenCV/: cat_passport.py  opencv_intro.py
practice/2_Classification/: doge_classifier.py  hello_classification.py  mobilenet-v2-pytorch.xml
practice/2_Classification/public/mobilenet-v2-pytorch/FP16/: mobilenet-v2-pytorch.mapping  mobilenet-v2-pytorch.xml
practice/2_Classification/public/mobilenet-v2-pytorch/FP32/: mobilenet-v2-pytorch.mapping  mobilenet-v2-pytorch.xml
practice/3_Detection/: ie_detector.py
practice/4_Tracking/: evaluation.txt  result.txt  tracker.py
practice/4_Tracking/DST1/: evaluation.txt  result.txt
practice/openvino-env/: pyproject.toml
